<resources>
    <string name="app_name">DegreeApp</string>
    <string name="opzioni">Opzioni</string>
    <string name="informazioni">Informazioni</string>
    <string name="trofei">Trofei</string>
    <string name="collezione">Collezione</string>
    <string name="giardino">Giardino</string>
    <string name="qr_code">QR-CODE</string>
    <string name="descrizione">Descrizione</string>
    <string name="bloccato">Bloccato</string>
    <string name="indietro">Indietro</string>
    <string name="i_miei_trofei">I miei trofei</string>
    <string name="la_mia_collezione">La mia collezione</string>
    <string name="titolo">Titolo</string>
    <string name="bravo">Bravo!</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="help_title">Cosa fare??</string>
    <string name="help_description">Cerca un simbolo simile a un quadrato alla fermata dell\'autobus e inquadralo con attenzione</string>
    <string name="capito">CAPITO</string>
    <string name="sbloccato_il">Sbloccato il:</string>
    <string name="tempo">Tempo</string>
    <string name="elimina">Elimina</string>
    <string name="trophy_message">Per sbloccare questo trofeo dei trovare %1$s elementi</string>
    <string name="thropy_unlocked">Hai già collezionato %1$s elementi, il trofeo è sbloccato</string>
    <string name="informations">BENVENUTO!\n\nLo scopo di questa applicazione è di renderti più consapevole dell\'impatto ambientale che puoi avere nel mondo.\nOgni volta che andrai alla fermata dell\'autobus troverai un QR Code: potrai inquadrarlo con l\'applicazione e ti permetterà di sbloccare tanti premi con i quali potrai giocare nel tuo giardino personale.\n\nTrovali tutti!</string>
</resources>
