<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    >

    <Button
        android:id="@+id/home_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/opzioni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </Button>

    <Button
        android:id="@+id/home_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/informazioni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </Button>

    <Button
        android:id="@+id/home_achievements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:text="@string/trofei"
        app:layout_constraintEnd_toStartOf="@+id/home_information"
        app:layout_constraintTop_toTopOf="parent">
    </Button>

    <ImageView
        android:id="@+id/home_collection"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/collection_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_qrcode">
    </ImageView>

    <ImageView
        android:id="@+id/home_garden"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/garden_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home_qrcode"
        app:layout_constraintStart_toStartOf="parent">
    </ImageView>

    <Button
        android:id="@+id/home_qrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>