<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <include layout="@layout/widget_app_bar"
       android:id="@+id/app_bar">
   </include>

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_image_not_supported_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        android:layout_margin="20dp"
        android:padding="20dp">
    </ImageView>

    <TextView
        android:id="@+id/item_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bravo"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        app:layout_constraintStart_toEndOf="@+id/item_image"
        app:layout_constraintTop_toTopOf="@+id/item_image"
        android:layout_margin="10dp">
    </TextView>

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titolo"
        app:layout_constraintStart_toEndOf="@+id/item_image"
        app:layout_constraintTop_toBottomOf="@+id/item_congratulations"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        android:layout_marginStart="10dp">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_image"
        app:layout_constraintTop_toBottomOf="@+id/item_title"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/descrizione">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>